Code Refactor
SonarCloud findings fixed